--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="sidebar">
-        <h2>Dashboard</h2>
+        <h2>📄Email Classifier</h2>
         <ul>
             {% for item in nav_items %}
             <li><a href="{{ item.url }}" {% if item.active %}class="active"{% endif %}>{{ item.name }}</a></li>
