--- a/templates/base.html
+++ b/templates/base.html
@@ -8,17 +8,25 @@
     {% block extra_css %}{% endblock %}
 </head>
 <body>
-    <div class="sidebar">
-        <h2>📄Email Classifier</h2>
-        <ul>
-            {% for item in nav_items %}
-            <li><a href="{{ item.url }}" {% if item.active %}class="active"{% endif %}>{{ item.name }}</a></li>
-            {% endfor %}
-        </ul>
-    </div>
+    <div class="layout-wrapper">
+        <div class="sidebar">
+            <h2>📄Email Classifier</h2>
+            <ul>
+                {% for item in nav_items %}
+                <li><a href="{{ item.url }}" {% if item.active %}class="active"{% endif %}>{{ item.name }}</a></li>
+                {% endfor %}
+            </ul>
+        </div>
 
-    <div class="main-content">
-        {% block content %}{% endblock %}
+        <div class="content-wrapper">
+            <div class="main-content">
+                {% block content %}{% endblock %}
+            </div>
+            
+            <footer class="footer">
+                <p class="copyright">&copy; 2024 Email Classifier. All rights reserved.</p>
+            </footer>
+        </div>
     </div>
 
     {% block scripts %}{% endblock %}
