--- a/static/login.css
+++ b/static/login.css
@@ -6,7 +6,7 @@ body {
     align-items: center;
     justify-content: center;
     height: 100vh;
-    background-image: url('../static/images/background.jpg');
+    background-image: url('/static/images/baground.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
